# HMM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  matrix.hpp
src/: hmm.cpp  hmm.hpp  initializers.cpp  initializers.hpp  matrix.hpp
temp/: backup.cpp
